@@ -23,31 +23,41 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.URI;
+import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Map;
 import java.util.Set;
-import java.util.Stack;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+
+import javax.inject.Provider;
 
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.xwiki.component.util.DefaultParameterizedType;
+import org.xwiki.model.reference.AttachmentReference;
+import org.xwiki.model.reference.DocumentReference;
+import org.xwiki.model.reference.EntityReferenceSerializer;
+import org.xwiki.stability.Unstable;
+import org.xwiki.url.filesystem.FilesystemExportContext;
 
 import com.xpn.xwiki.XWikiContext;
 import com.xpn.xwiki.XWikiException;
 import com.xpn.xwiki.doc.XWikiAttachment;
 import com.xpn.xwiki.doc.XWikiDocument;
-import com.xpn.xwiki.util.Util;
+import com.xpn.xwiki.internal.model.LegacySpaceResolver;
 
 /**
- * Handle URL generation in rendered wiki pages. This implementation makes sure URL will be local URL for exported
- * content (like skin, attachment and pages).
- * 
+ * Handle URL generation in rendered wiki pages. This implementation makes sure that generated URLs will be file URLs
+ * pointing to the local filesystem, for exported content (like skin, attachment and pages). This is needed for example
+ * for the HTML export.
+ *
  * @version $Id$
  */
 public class ExportURLFactory extends XWikiServletURLFactory
@@ -65,29 +75,28 @@ public class ExportURLFactory extends XWikiServletURLFactory
     // TODO: use real css parser
     private static Pattern CSSIMPORT = Pattern.compile("^\\s*@import\\s*\"(.*)\"\\s*;$", Pattern.MULTILINE);
 
-    /**
-     * When there are relative links to resources inside CSS files they are resolved based on the location of the CSS
-     * file itself. When we export we put all resources and attachments in the root of the exported directory and thus
-     * in order to have valid relative links we need to make them match. We use this variable to do this.
-     */
-    private Stack cssPathAdjustementStack = new Stack();
+    private LegacySpaceResolver legacySpaceResolver = Utils.getComponent(LegacySpaceResolver.class);
+
+    private EntityReferenceSerializer<String> pathEntityReferenceSerializer =
+        Utils.getComponent(EntityReferenceSerializer.TYPE_STRING, "path");
 
     /**
      * Pages for which to convert URL to local.
+     *
+     * @deprecated since 6.2RC1, use {link #getExportURLFactoryContext} instead
      */
-    protected Set<String> exportedPages = new HashSet<String>();
+    @Deprecated
+    protected Set<String> exportedPages = new HashSet<>();
 
     /**
      * Directory where to export attachment.
+     *
+     * @deprecated since 6.2RC1, use {link #getExportURLFactoryContext} instead
      */
+    @Deprecated
     protected File exportDir;
 
-    /**
-     * Names of skins needed by rendered page(s).
-     */
-    private Set<String> neededSkins = new HashSet<String>();
-
-    Set<String> exporteSkinFiles = new HashSet<String>();
+    private FilesystemExportContext exportContext;
 
     /**
      * ExportURLFactory constructor.
@@ -97,24 +106,37 @@ public class ExportURLFactory extends XWikiServletURLFactory
     }
 
     /**
-     * @return the list skins names used.
+     * @since 7.2M1
      */
+    @Unstable
+    public FilesystemExportContext getFilesystemExportContext()
+    {
+        return this.exportContext;
+    }
+
+    /**
+     * @return the list skins names used.
+     * @deprecated since 6.2RC1, use {@link #getFilesystemExportContext()}
+     */
+    @Deprecated
     public Collection<String> getNeededSkins()
     {
-        return this.neededSkins;
+        return getFilesystemExportContext().getNeededSkins();
     }
 
     /**
      * @return the list of custom skin files.
+     * @deprecated since 6.2RC1, use {@link #getFilesystemExportContext()}
      */
+    @Deprecated
     public Collection<String> getExportedSkinFiles()
     {
-        return this.exporteSkinFiles;
+        return getFilesystemExportContext().getExportedSkinFiles();
     }
 
     /**
      * Init the url factory.
-     * 
+     *
      * @param exportedPages the pages that will be exported.
      * @param exportDir the directory where to copy exported objects (attachments).
      * @param context the XWiki context.
@@ -123,17 +145,20 @@ public class ExportURLFactory extends XWikiServletURLFactory
     {
         super.init(context);
 
+        Provider<FilesystemExportContext> exportContextProvider = Utils.getComponent(
+            new DefaultParameterizedType(null, Provider.class, FilesystemExportContext.class));
+        this.exportContext = exportContextProvider.get();
+
         if (exportDir != null) {
-            this.exportDir = exportDir;
+            getFilesystemExportContext().setExportDir(exportDir);
+
+            // Backward-compatibility, also set the exportDir deprecated variable.
+            this.exportDir = getFilesystemExportContext().getExportDir();
         }
 
         if (exportedPages != null) {
-            XWikiDocument doc = new XWikiDocument();
-
             for (String pageName : exportedPages) {
-                doc.setDatabase(null);
-                doc.setSpace(null);
-                doc.setName(null);
+                XWikiDocument doc = new XWikiDocument();
 
                 doc.setFullName(pageName);
 
@@ -142,14 +167,17 @@ public class ExportURLFactory extends XWikiServletURLFactory
                 if (doc.getDatabase() != null) {
                     absolutePageName += doc.getDatabase().toLowerCase();
                 } else {
-                    absolutePageName += context.getDatabase().toLowerCase();
+                    absolutePageName += context.getWikiId().toLowerCase();
                 }
 
                 absolutePageName += XWikiDocument.DB_SPACE_SEP;
 
                 absolutePageName += doc.getFullName();
 
-                this.exportedPages.add(absolutePageName);
+                getFilesystemExportContext().addExportedPage(absolutePageName);
+
+                // Backward-compatibility, also set the exportedPages deprecated variable.
+                this.exportedPages.addAll(getFilesystemExportContext().getExportedPages());
             }
         }
     }
@@ -158,23 +186,19 @@ public class ExportURLFactory extends XWikiServletURLFactory
     public URL createSkinURL(String filename, String skin, XWikiContext context)
     {
         try {
-            getNeededSkins().add(skin);
+            getFilesystemExportContext().addNeededSkin(skin);
 
-            StringBuffer newpath = new StringBuffer();
+            StringBuilder newPath = new StringBuilder("file://");
 
-            newpath.append("file://");
+            // Adjust path for links inside CSS files (since they need to be relative to the CSS file they're in).
+            adjustCSSPath(newPath);
 
-            // Adjust path for links inside CSS files.
-            if (!this.cssPathAdjustementStack.empty()) {
-                newpath.append(this.cssPathAdjustementStack.peek());
-            }
+            newPath.append("skins/");
+            newPath.append(skin);
 
-            newpath.append("skins/");
-            newpath.append(skin);
+            addFileName(newPath, filename, false, context);
 
-            addFileName(newpath, filename, false, context);
-
-            return new URL(newpath.toString());
+            return new URL(newPath.toString());
         } catch (Exception e) {
             LOGGER.error("Failed to create skin URL", e);
         }
@@ -183,38 +207,38 @@ public class ExportURLFactory extends XWikiServletURLFactory
     }
 
     @Override
-    public URL createSkinURL(String filename, String web, String name, XWikiContext context)
+    public URL createSkinURL(String filename, String spaces, String name, XWikiContext context)
     {
-        return createSkinURL(filename, web, name, null, context, false);
+        return createSkinURL(filename, spaces, name, null, context, false);
     }
 
-    public URL createSkinURL(String filename, String web, String name, XWikiContext context, boolean skipSkinDirectory)
+    public URL createSkinURL(String filename, String spaces, String name, XWikiContext context, boolean skipSkinDirectory)
     {
-        return createSkinURL(filename, web, name, null, context, skipSkinDirectory);
+        return createSkinURL(filename, spaces, name, null, context, skipSkinDirectory);
     }
 
     @Override
-    public URL createSkinURL(String fileName, String web, String name, String wikiId, XWikiContext context)
+    public URL createSkinURL(String fileName, String spaces, String name, String wikiId, XWikiContext context)
     {
-        return createSkinURL(fileName, web, name, wikiId, context, false);
+        return createSkinURL(fileName, spaces, name, wikiId, context, false);
     }
 
-    public URL createSkinURL(String fileName, String web, String name, String wikiId, XWikiContext context,
+    public URL createSkinURL(String fileName, String spaces, String name, String wikiId, XWikiContext context,
         boolean skipSkinDirectory)
     {
         URL skinURL;
         if (wikiId == null) {
-            skinURL = super.createSkinURL(fileName, web, name, context);
+            skinURL = super.createSkinURL(fileName, spaces, name, context);
         } else {
-            skinURL = super.createSkinURL(fileName, web, name, wikiId, context);
+            skinURL = super.createSkinURL(fileName, spaces, name, wikiId, context);
         }
 
-        if (!"skins".equals(web)) {
+        if (!"skins".equals(spaces)) {
             return skinURL;
         }
 
         try {
-            getNeededSkins().add(name);
+            getFilesystemExportContext().addNeededSkin(name);
 
             StringBuffer filePathBuffer = new StringBuffer();
             if (!skipSkinDirectory) {
@@ -226,56 +250,31 @@ public class ExportURLFactory extends XWikiServletURLFactory
 
             String filePath = filePathBuffer.toString();
 
-            if (!this.exporteSkinFiles.contains(filePath)) {
-                this.exporteSkinFiles.add(filePath);
+            if (!getFilesystemExportContext().hasExportedSkinFile(filePath)) {
+                getFilesystemExportContext().addExportedSkinFile(filePath);
 
-                File file = new File(this.exportDir, filePath);
-
-                // Make sure the folder exists
-                File folder = file.getParentFile();
-                if (!folder.exists()) {
-                    folder.mkdirs();
+                File file = new File(getFilesystemExportContext().getExportDir(), filePath);
+                if (!file.exists()) {
+                    // Make sure the folder exists
+                    File folder = file.getParentFile();
+                    if (!folder.exists()) {
+                        folder.mkdirs();
+                    }
+                    renderSkinFile(skinURL.getPath(), spaces, name, wikiId, file, StringUtils.countMatches(filePath, "/"),
+                        context);
                 }
 
-                FileOutputStream fos = new FileOutputStream(file);
-                String database = context.getDatabase();
-
-                try {
-                    XWikiServletResponseStub response = new XWikiServletResponseStub();
-                    response.setOutpuStream(fos);
-                    context.setResponse(response);
-                    if (wikiId != null) {
-                        context.setDatabase(wikiId);
-                    }
-
-                    // Adjust path for links inside CSS files.
-                    this.cssPathAdjustementStack.push(StringUtils.repeat("../", StringUtils.countMatches(filePath, "/")));
-                    try {
-                        SKINACTION.render(skinURL.getPath(), context);
-                    } finally {
-                        this.cssPathAdjustementStack.pop();
-                    }
-                } finally {
-                    fos.close();
-                    if (wikiId != null) {
-                        context.setDatabase(database);
-                    }
-                }
-
-                followCssImports(file, web, name, wikiId, context);
+                followCssImports(file, spaces, name, wikiId, context);
             }
 
-            StringBuffer newpath = new StringBuffer();
-            newpath.append("file://");
+            StringBuilder newPath = new StringBuilder("file://");
 
-            // Adjust path for links inside CSS files.
-            if (!this.cssPathAdjustementStack.empty()) {
-                newpath.append(this.cssPathAdjustementStack.peek());
-            }
+            // Adjust path for links inside CSS files (since they need to be relative to the CSS file they're in).
+            adjustCSSPath(newPath);
 
-            newpath.append(filePath);
+            newPath.append(filePath);
 
-            skinURL = new URL(newpath.toString());
+            skinURL = new URL(newPath.toString());
         } catch (Exception e) {
             LOGGER.error("Failed to create skin URL", e);
         }
@@ -284,9 +283,64 @@ public class ExportURLFactory extends XWikiServletURLFactory
     }
 
     /**
+     * Results go in the passed {@code outputFile}.
+     */
+    private void renderSkinFile(String path, String spaces, String name, String wikiId, File outputFile,
+        int cssPathAdjustmentValue, XWikiContext context) throws IOException, XWikiException
+    {
+        FileOutputStream fos = new FileOutputStream(outputFile);
+        String database = context.getWikiId();
+
+        try {
+            XWikiServletResponseStub response = new XWikiServletResponseStub();
+            response.setOutpuStream(fos);
+            context.setResponse(response);
+            if (wikiId != null) {
+                context.setWikiId(wikiId);
+            }
+
+            // Adjust path for links inside CSS files.
+            getFilesystemExportContext().pushCSSParentLevels(cssPathAdjustmentValue);
+            try {
+                renderWithSkinAction(spaces, name, wikiId, path, context);
+            } finally {
+                getFilesystemExportContext().popCSSParentLevels();
+            }
+        } finally {
+            fos.close();
+            if (wikiId != null) {
+                context.setWikiId(database);
+            }
+        }
+    }
+
+    private void renderWithSkinAction(String spaces, String name, String wikiId, String path, XWikiContext context)
+        throws IOException, XWikiException
+    {
+        // We're simulating a Skin Action below. However we need to ensure that we set the right doc
+        // in the XWiki Context since this is what XWikiAction does and if we don't do this it generates
+        // issues since the current doc is put in the context instead of the skin. Specifically we'll
+        // get for example "Main.WebHome" as the current doc instead of "Main.flamingo".
+        // See http://jira.xwiki.org/browse/XWIKI-10922 for details.
+
+        DocumentReference dummyDocumentReference =
+            new DocumentReference(wikiId, this.legacySpaceResolver.resolve(spaces), name);
+        XWikiDocument dummyDocument = context.getWiki().getDocument(dummyDocumentReference, context);
+
+        Map<String, Object> backup = new HashMap<>();
+        XWikiDocument.backupContext(backup, context);
+        try {
+            dummyDocument.setAsContextDoc(context);
+            SKINACTION.render(path, context);
+        } finally {
+            XWikiDocument.restoreContext(backup, context);
+        }
+    }
+
+    /**
      * Resolve CSS <code>@import</code> targets.
      */
-    private void followCssImports(File file, String web, String name, String wikiId, XWikiContext context)
+    private void followCssImports(File file, String spaces, String name, String wikiId, XWikiContext context)
         throws IOException
     {
         // TODO: find better way to know it's css file (not sure it's possible, we could also try to find @import
@@ -304,14 +358,14 @@ public class ExportURLFactory extends XWikiServletURLFactory
                     String fileName = matcher.group(1);
 
                     // Adjust path for links inside CSS files.
-                    while(fileName.startsWith("../")) {
+                    while (fileName.startsWith("../")) {
                         fileName = StringUtils.removeStart(fileName, "../");
                     }
 
                     if (wikiId == null) {
-                        createSkinURL(fileName, web, name, context, true);
+                        createSkinURL(fileName, spaces, name, context, true);
                     } else {
-                        createSkinURL(fileName, web, name, wikiId, context, true);
+                        createSkinURL(fileName, spaces, name, wikiId, context, true);
                     }
                 }
             } finally {
@@ -324,20 +378,39 @@ public class ExportURLFactory extends XWikiServletURLFactory
     public URL createResourceURL(String filename, boolean forceSkinAction, XWikiContext context)
     {
         try {
-            StringBuffer newpath = new StringBuffer();
+            File targetFile = new File(getFilesystemExportContext().getExportDir(), "resources/" + filename);
+            if (!targetFile.exists()) {
+                if (!targetFile.getParentFile().exists()) {
+                    targetFile.getParentFile().mkdirs();
+                }
 
-            newpath.append("file://");
-
-            // Adjust path for links inside CSS files.
-            if (!this.cssPathAdjustementStack.empty()) {
-                newpath.append(this.cssPathAdjustementStack.peek());
+                // Step 1: Copy the resource
+                // If forceSkinAction is false then there's no velocity in the resource and we can just copy it simply.
+                // Otherwise we need to go through the Skin Action to perform the rendering.
+                if (forceSkinAction) {
+                    // Extract the first path as the wiki page
+                    int pos = filename.indexOf('/', 0);
+                    String page = filename.substring(0, pos);
+                    renderSkinFile("resource/" + filename, "resources", page, context.getDatabase(), targetFile,
+                        StringUtils.countMatches(filename, "/") + 1, context);
+                } else {
+                    FileOutputStream fos = new FileOutputStream(targetFile);
+                    InputStream source = context.getEngineContext().getResourceAsStream("/resources/" + filename);
+                    IOUtils.copy(source, fos);
+                    fos.close();
+                }
             }
 
-            newpath.append("resources");
+            StringBuilder newPath = new StringBuilder("file://");
 
-            addFileName(newpath, filename, false, context);
+            // Adjust path for links inside CSS files (since they need to be relative to the CSS file they're in).
+            adjustCSSPath(newPath);
 
-            return new URL(newpath.toString());
+            newPath.append("resources");
+
+            addFileName(newPath, filename, false, context);
+
+            return new URL(newPath.toString());
         } catch (Exception e) {
             LOGGER.error("Failed to create skin URL", e);
         }
@@ -346,25 +419,31 @@ public class ExportURLFactory extends XWikiServletURLFactory
     }
 
     @Override
-    public URL createURL(String web, String name, String action, String querystring, String anchor, String xwikidb,
+    public URL createURL(String spaces, String name, String action, String querystring, String anchor, String xwikidb,
         XWikiContext context)
     {
-        String wikiname = xwikidb == null ? context.getDatabase().toLowerCase() : xwikidb.toLowerCase();
-
         try {
-            if (this.exportedPages.contains(wikiname + XWikiDocument.DB_SPACE_SEP + web + XWikiDocument.SPACE_NAME_SEP
-                + name)
-                && "view".equals(action) && context.getLinksAction() == null) {
+            // Look for a special handler for the passed action
+            try {
+                ExportURLFactoryActionHandler handler = Utils.getComponent(ExportURLFactoryActionHandler.class, action);
+                return handler.createURL(spaces, name, querystring, anchor, xwikidb, context,
+                    getFilesystemExportContext());
+            } catch (Exception e) {
+                // Failed to find such a component or it doesn't work, simply ignore it and continue with the default
+                // behavior!
+            }
+
+            String wikiname = xwikidb == null ? context.getWikiId().toLowerCase() : xwikidb.toLowerCase();
+
+            String serializedReference = this.pathEntityReferenceSerializer.serialize(
+                new DocumentReference(wikiname, this.legacySpaceResolver.resolve(spaces), name));
+            if (getFilesystemExportContext().hasExportedPage(serializedReference) && "view".equals(action)
+                && context.getLinksAction() == null)
+            {
                 StringBuffer newpath = new StringBuffer();
 
                 newpath.append("file://");
-
-                newpath.append(wikiname);
-                newpath.append(".");
-                newpath.append(web);
-                newpath.append(".");
-                newpath.append(name);
-
+                newpath.append(serializedReference);
                 newpath.append(".html");
 
                 if (!StringUtils.isEmpty(anchor)) {
@@ -378,14 +457,15 @@ public class ExportURLFactory extends XWikiServletURLFactory
             LOGGER.error("Failed to create page URL", e);
         }
 
-        return super.createURL(web, name, action, querystring, anchor, xwikidb, context);
+        return super.createURL(spaces, name, action, querystring, anchor, xwikidb, context);
     }
 
     /**
      * Generate an url targeting attachment in provided wiki page.
-     * 
+     *
      * @param filename the name of the attachment.
-     * @param space the space of the page containing the attachment.
+     * @param spaces a serialized space reference which can contain one or several spaces (e.g. "space1.space2"). If
+     *        a space name contains a dot (".") it must be passed escaped as in "space1\.with\.dot.space2"
      * @param name the name of the page containing the attachment.
      * @param xwikidb the wiki of the page containing the attachment.
      * @param context the XWiki context.
@@ -394,54 +474,61 @@ public class ExportURLFactory extends XWikiServletURLFactory
      * @throws IOException error when retrieving document attachment.
      * @throws URISyntaxException when retrieving document attachment.
      */
-    private URL createAttachmentURL(String filename, String space, String name, String xwikidb, XWikiContext context)
+    private URL createAttachmentURL(String filename, String spaces, String name, String xwikidb, XWikiContext context)
         throws XWikiException, IOException, URISyntaxException
     {
-        String db = (xwikidb == null ? context.getDatabase() : xwikidb);
-        String path = "attachment/" + db + "." + space + "." + name + "." + filename;
+        String db = (xwikidb == null ? context.getWikiId() : xwikidb);
+        DocumentReference documentReference =
+            new DocumentReference(db, this.legacySpaceResolver.resolve(spaces), name);
+        String serializedReference = this.pathEntityReferenceSerializer.serialize(
+            new AttachmentReference(filename, documentReference));
+        String path = "attachment/" + serializedReference;
 
-        File file = new File(this.exportDir, path);
+        File file = new File(getFilesystemExportContext().getExportDir(), path);
         if (!file.exists()) {
-            XWikiDocument doc =
-                context.getWiki().getDocument(
-                    db + XWikiDocument.DB_SPACE_SEP + space + XWikiDocument.SPACE_NAME_SEP + name, context);
+            XWikiDocument doc = context.getWiki().getDocument(documentReference, context);
             XWikiAttachment attachment = doc.getAttachment(filename);
+            file.getParentFile().mkdirs();
             FileOutputStream fos = new FileOutputStream(file);
             IOUtils.copy(attachment.getContentInputStream(context), fos);
             fos.close();
         }
 
-        // Adjust path for links inside CSS files.
-        if (!this.cssPathAdjustementStack.empty()) {
-            path = this.cssPathAdjustementStack.peek() + path;
-        }
+        StringBuilder newPath = new StringBuilder("file://");
 
-        return new URI("file://" + path.replace(" ", "%20")).toURL();
+        // Adjust path for links inside CSS files (since they need to be relative to the CSS file they're in).
+        adjustCSSPath(newPath);
+
+        newPath.append(path);
+
+        // Since the returned URL is used in HTML links, we need to escape "%" characters so that browsers don't decode
+        // for example %2E as "." by default which would lead to the browser not finding the file on the filesystem.
+        return new URL(newPath.toString().replaceAll("%", "%25"));
     }
 
     @Override
-    public URL createAttachmentURL(String filename, String web, String name, String action, String querystring,
+    public URL createAttachmentURL(String filename, String spaces, String name, String action, String querystring,
         String xwikidb, XWikiContext context)
     {
         try {
-            return createAttachmentURL(filename, web, name, xwikidb, context);
+            return createAttachmentURL(filename, spaces, name, xwikidb, context);
         } catch (Exception e) {
             LOGGER.error("Failed to create attachment URL", e);
 
-            return super.createAttachmentURL(filename, web, name, action, null, xwikidb, context);
+            return super.createAttachmentURL(filename, spaces, name, action, null, xwikidb, context);
         }
     }
 
     @Override
-    public URL createAttachmentRevisionURL(String filename, String web, String name, String revision, String xwikidb,
+    public URL createAttachmentRevisionURL(String filename, String spaces, String name, String revision, String xwikidb,
         XWikiContext context)
     {
         try {
-            return createAttachmentURL(filename, web, name, xwikidb, context);
+            return createAttachmentURL(filename, spaces, name, xwikidb, context);
         } catch (Exception e) {
             LOGGER.error("Failed to create attachment URL", e);
 
-            return super.createAttachmentRevisionURL(filename, web, name, revision, xwikidb, context);
+            return super.createAttachmentRevisionURL(filename, spaces, name, revision, xwikidb, context);
         }
     }
 
@@ -452,12 +539,17 @@ public class ExportURLFactory extends XWikiServletURLFactory
             return "";
         }
 
-        String path = Util.escapeURL(url.toString());
+        String path = url.toString();
 
         if (url.getProtocol().equals("file")) {
             path = path.substring("file://".length());
         }
 
         return path;
+    }
+
+    private void adjustCSSPath(StringBuilder path)
+    {
+        path.append(StringUtils.repeat("../", getFilesystemExportContext().getCSSParentLevel()));
     }
 }
